[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Ninjani"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.9.0"
jemallocator = "0.3.2"
memchr = "2.3.4"
bytecount = "0.6.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"